--- a/config/locales/server.en.yml
+++ b/config/locales/server.en.yml
@@ -1,3 +1,3 @@
 en:
   site_settings:
-    lazy_peertube_enabled: "Enable lazy loading for PeerTube embeds (experimental)"
+    lazy_neattube_enabled: "Enable lazy loading for Neat.Tube embeds (experimental)"
